Resolves: tdf#126190 don't default to WB_NOHIDESELECTION

i.e use traditional style as used before...

commit 41db073808566641a3c364e6490f33b7f204d0b0
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Wed Sep 19 13:47:11 2018 +0100

Change-Id: I2f01f33055e8735d52de26651dba3853739c07aa
Reviewed-on: https://gerrit.libreoffice.org/75689
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>